Applied class info-footer-link to footer in _Layout.cshtml

--- a/src/Pages/Shared/_Layout.cshtml
+++ b/src/Pages/Shared/_Layout.cshtml
@@ -80,7 +80,7 @@
 <footer class="border-top footer text-muted bg-footer">
     <div class="container">
         <p class="info-footer">
-            &copy; 2022 - The C Sharp Investigators - <a asp-area="" asp-page="/Privacy">Privacy</a> <a href="https://github.com/nuri1126/TheCSharpInvestigators">Contribute</a>
+            &copy; 2022 - The C Sharp Investigators - <a class="info-footer-link" asp-area="" asp-page="/Privacy">Privacy</a> <a class="info-footer-link" href="https://github.com/nuri1126/TheCSharpInvestigators">Contribute</a>
         </p>
 
     </div>
