Added css styling to comment max length in site.css

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -415,3 +415,8 @@ div.comment {
     margin-bottom: 5px;
     width:400px;
 }
+
+.comment-max-char {
+    margin-top: -10px;
+    text-align: right;
+}
