--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -409,6 +409,7 @@ div.comment {
     flex-direction: column;
     font-size: 20px;
     margin-bottom: 5px;
+    overflow-wrap: break-word;
 }
 
 .comment-box {
