Updating CSS in site.css

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -429,3 +429,8 @@ div.comment {
     margin-top: -10px;
     text-align: right;
 }
+
+/* Input Error boundary box */
+.input-error {
+    outline: darkred solid;
+}
