Added index page image max-height in site.css so tall images will be cropped to appropriate size

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -434,3 +434,9 @@ div.comment {
 .input-error {
     outline: darkred solid;
 }
+
+/*Index page image*/
+#index-image-height {
+    max-height: 200px;
+    object-fit: cover;
+}
