--- a/src/Pages/Neighborhood/Create.cshtml
+++ b/src/Pages/Neighborhood/Create.cshtml
@@ -11,7 +11,7 @@
 <h1>Create</h1>
 
 <div class="container">
-    <form method="post">
+    <form method="post" enctype="multipart/form-data" asp-action="Create">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         @Html.HiddenFor(x => x.Neighborhood.Id)
         
@@ -51,6 +51,12 @@
             <label asp-for="Neighborhood.ShortDesc" class="control-label"></label>
             <input asp-for="Neighborhood.ShortDesc" class="form-control" />
             <span asp-validation-for="Neighborhood.ShortDesc" class="text-danger"></span>
+        </div>
+
+       <!--Allow user to upload a photo-->
+        <div>
+            <label asp-for="Neighborhood.ImagePath"></label>
+            <input type="file" name="files" class="form-control">
         </div>
 
         <div class="form-group">
