Fixed typo in site.css

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -436,7 +436,7 @@ div.comment {
 }
 
 /*Index page image*/
-#index-image-height {
+.index-image-height {
     max-height: 200px;
     object-fit: cover;
 }
