--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -443,7 +443,7 @@ div.comment {
 }
 
 /*Index page image*/
-.index-image-height {
+#index-image-height {
     max-height: 200px;
     object-fit: cover;
 }
