--- a/src/Pages/Neighborhood/Read.cshtml
+++ b/src/Pages/Neighborhood/Read.cshtml
@@ -22,7 +22,7 @@
     }
 <div class="carousel-inner">
     <div class="carousel-item active">
-        <img src="@neighborhoodImages.First()" class="d-block w-100" alt="...">
+        <img src="@neighborhoodImages.First()" class="d-block carousel-img" alt="...">
         <div class="carousel-caption d-none d-md-block">
             <h5>@Model.Neighborhood.Name</h5>
             <p>@Model.Neighborhood.ShortDesc</p>
@@ -33,7 +33,7 @@
         @foreach (var neighborhoodImage in @neighborhoodImages.Skip(1).ToArray())
         {
             <div class="carousel-item">
-                <img src="@neighborhoodImage" class="d-block w-100" alt="...">
+                <img src="@neighborhoodImage" class="d-block carousel-img" alt="...">
                 <div class="carousel-caption">
                     <h5>@Model.Neighborhood.Name</h5>
                     <p>@Model.Neighborhood.ShortDesc</p>
