--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -37,6 +37,9 @@ for details on configuring this project to bundle and minify static web assets. 
     opacity: 1;
     -webkit-transform-style: preserve-3d;
 }
+.card-img-top {
+    height: 150px;
+}
 
 .card-columns .card-body {
     height: 100px;
