Updated image size ratio on site.css

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -398,10 +398,11 @@ ul {
     text-align: center;
 }
 
-.carousel-img {
+.carousel .carousel-img{
     width: 1000px;
     height: 500px;
     object-fit: cover;
+    margin: auto;
 }
 
 .slider-card img {
