Updated comment width to 100% on site.css

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -493,6 +493,7 @@ ul {
 
 div.comment {
     display: inline-grid;
+    width: 100%;
 }
 
 .comment-row {
@@ -513,7 +514,6 @@ div.comment {
 
 .comment-box {
     margin-bottom: 5px;
-    width:400px;
 }
 
 .comment-max-char {
