Updated direction of removing comment on Neighborhood.cshtml

--- a/src/Pages/Explore/Neighborhood.cshtml
+++ b/src/Pages/Explore/Neighborhood.cshtml
@@ -171,14 +171,14 @@
 
 
         <h6>
-            Remove a Comment:
+            Remove Comment ID:
         </h6>
         <!--Allow user to remove comment by CommentId-->
         <div>
             <form method="post">
                 <div class="comment">
                     <input value="" class="comment-box" name="CommentId">
-                    <button type="submit" class="btn btn-primary">Remove Comment</button>
+                    <button type="submit" class="btn btn-primary">Remove Comment ID</button>
                 </div>
             </form>
         </div>
