Removed redundant Lets Go SEA on button in Index.cshtml

--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -17,7 +17,7 @@
             <div class="intro-text">
                 <h1 class="homepage-title-content">Lets Go SEA</h1>
                 <p class="homepage-tagline-content">The one-stop site to explore the beautiful neighborhoods of Seattle!</p>
-                <a class="btn btn-primary btn-xl" role="button" asp-page="/Explore/Index">Lets Go Sea!</a>
+                <a class="btn btn-primary btn-xl" role="button" asp-page="/Explore/Index">Enter</a>
             </div>
         </div>
     </div>
