Updated size of Explore page star in site.css

--- a/src/wwwroot/css/site.css
+++ b/src/wwwroot/css/site.css
@@ -11,6 +11,10 @@
     background-color: inherit;
 }
 
+#expore-page-star {
+    font-size: 25px !important;
+}
+
 .checked {
     color: orange;
 }
