Minor aesthetic fix in Index.cshtml

--- a/src/Pages/Explore/Index.cshtml
+++ b/src/Pages/Explore/Index.cshtml
@@ -74,7 +74,7 @@
                         if (neighborhood.Ratings != null)
                         {
                             <span class="avg-rating" avg-rating="@neighborhood.Ratings.Average()">
-                                @neighborhood.Ratings.Average().ToString("0.00") out of 5  <i class="fa fa-star" id="expore-page-star"></i>
+                                @neighborhood.Ratings.Average().ToString("0.00")  <i class="fa fa-star" id="expore-page-star"></i>
                             </span>
                         }
                         else
