--- a/src/Pages/Explore/Neighborhood.cshtml
+++ b/src/Pages/Explore/Neighborhood.cshtml
@@ -161,7 +161,8 @@
         <div>
             <form method="post">
                 <div class="comment">
-                    <textarea class="comment-box" name="NewCommentText" rows="5"></textarea>
+                    <textarea class="comment-box" name="NewCommentText" rows="5" maxlength=@Model.commentMaxChar></textarea>
+                    <span class="comment-max-char">Max characters allowed: @Model.commentMaxChar</span>
                     <button type="submit" class="btn btn-primary">Save Comment</button>
                 </div>
             </form>
