--- a/src/Pages/Explore/Index.cshtml
+++ b/src/Pages/Explore/Index.cshtml
@@ -40,41 +40,41 @@
     </div>
 </div>
 
-
+<!--Display each neighborhood in card view-->
 <div class="row row-cols-1 row-cols-md-3 g-4">
-    @foreach (var neighborhood in @Model.Neighborhoods.OrderBy(neighborhood => neighborhood.Name))
+    @foreach (var neighborhood in @Model.neighborhoods.OrderBy(neighborhood => neighborhood.name))
     {
         <div class="col">
             <div class="card h-100">
-                <!-- Neighborhood Image section on Index Page -->
+                <!-- Neighborhood image section on Index Page -->
                 <div class="card-header" id="index-image-height">
-                    @{bool hasURLImage = (@neighborhood.Image != "" && @neighborhood.Image != null);}
-                    @{bool hasFileImage = (@neighborhood.ImagePath != "Default" && @neighborhood.ImagePath != "" && @neighborhood.ImagePath != null);}
+                    @{bool hasURLimage = (@neighborhood.image != "" && @neighborhood.image != null);}
+                    @{bool hasFileimage = (@neighborhood.imagePath != "Default" && @neighborhood.imagePath != "" && @neighborhood.imagePath != null);}
 
-                    <!-- If has URLImage, show the first one -->
-                    @if (hasURLImage)
+                    <!-- If has URLimage, show the first one -->
+                    @if (hasURLimage)
                     {
-                        <img src="@neighborhood.Image.Split(',').First()" class="card-img-top" id="index-image-height" alt="Picture of @neighborhood.Name">          
+                        <img src="@neighborhood.image.Split(',').First()" class="card-img-top" id="index-image-height" alt="Picture of @neighborhood.name">          
                     }
-                    <!-- Else: if has FileImage, show the first one -->
-                    @if (!hasURLImage && hasFileImage)
+                    <!-- Else: if has Fileimage, show the first one -->
+                    @if (!hasURLimage && hasFileimage)
                     {
-                        <img src="@neighborhood.ImagePath.Split(',').First()" class="card-img-top" id="index-image-height" alt="Picture of @neighborhood.Name">
+                        <img src="@neighborhood.imagePath.Split(',').First()" class="card-img-top" id="index-image-height" alt="Picture of @neighborhood.name">
                     }
                     <!-- If no image provided, show placeholder image -->
-                    @if (!hasURLImage && !hasFileImage)
+                    @if (!hasURLimage && !hasFileimage)
                     {
-                        <img src=/image/no_image.jpg class="card-img-top" id="index-image-height" alt="Picture of @neighborhood.Name">
+                        <img src=/image/no_image.jpg class="card-img-top" id="index-image-height" alt="Picture of @neighborhood.name">
                     }
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">@neighborhood.Name</h5>
-                    <p class="card-text">@neighborhood.ShortDesc</p>
+                    <h5 class="card-title">@neighborhood.name</h5>
+                    <p class="card-text">@neighborhood.shortDesc</p>
                     @{
-                        if (neighborhood.Ratings != null)
+                        if (neighborhood.ratings != null)
                         {
-                            <span class="avg-rating" avg-rating="@neighborhood.Ratings.Average()">
-                                @neighborhood.Ratings.Average().ToString("0.00")  <i class="fa fa-star" id="expore-page-star"></i>
+                            <span class="avg-rating" avg-rating="@neighborhood.ratings.Average()">
+                                @neighborhood.ratings.Average()<i class="fa fa-star"></i>
                             </span>
                         }
                         else
@@ -85,7 +85,7 @@
                     }
                 </div>
                 <div class="card-footer">
-                    <a class="btn btn-primary" asp-page="Neighborhood" asp-route-id="@neighborhood.Id">Explore more</a>
+                    <a class="btn btn-primary" asp-page="Neighborhood" asp-route-id="@neighborhood.id">Explore more</a>
                 </div>
             </div>
         </div>
@@ -117,10 +117,10 @@
             // Iterate over each element to find the one matching the search string
             $(".card").each(function () {
                 // Find the title of each card
-                let neighborhoodName = $(this).find("h5.card-title").text().toLowerCase();
+                let neighborhoodname = $(this).find("h5.card-title").text().toLowerCase();
 
                 // If the search string doesn't match, hide the card
-                if (neighborhoodName.indexOf(searchString) === -1) {
+                if (neighborhoodname.indexOf(searchString) === -1) {
                     $(this).parent().fadeOut("fast");
                 }
                 else {
@@ -135,8 +135,8 @@
         $(filterButtonDesc).click(() => {
             // function to sort cards by rating in descending order
             function cardSort(x, y) {
-                x = parseFloat($(x).find("span.avg-rating").attr("avg-rating")).toFixed(2);
-                y = parseFloat($(y).find("span.avg-rating").attr("avg-rating")).toFixed(2);
+                x = parseFloat($(x).find("span.avg-rating").attr("avg-rating"));
+                y = parseFloat($(y).find("span.avg-rating").attr("avg-rating"));
                 //returns the larger of the two avg ratings
                 return ((x < y) ? -1 : ((x > y) ? 1 : 0));
             }
@@ -155,8 +155,8 @@
 
             function cardSort(x, y) {
                 // finds average ratings of cards 
-                x = parseFloat($(x).find("span.avg-rating").attr("avg-rating")).toFixed(2);
-                y = parseFloat($(y).find("span.avg-rating").attr("avg-rating")).toFixed(2);
+                x = parseFloat($(x).find("span.avg-rating").attr("avg-rating"));
+                y = parseFloat($(y).find("span.avg-rating").attr("avg-rating"));
 
                 // compares both and returns the smaller value
                 return ((x > y) ? -1 : ((x < y) ? 1 : 0));
